# calicofx-core

./: .clangd  .dir-locals.el  CMakeLists.txt  README.md  build.sh
doc/: design.org
src/: CMakeLists.txt  logger.cpp  lv2PluginMgr.cpp  main.cpp  pw-client.cpp  sessionMgr.cpp
src/inc/: common.hpp  config.hpp  lv2PluginMgr.hpp  pw-client.hpp  sessionMgr.hpp
src/inc/pluginHandlers/: basePluginHandler.hpp  lv2Handler.hpp
src/inc/pluginHandlers/lv2/: lv2Handler.hpp  worker.hpp
src/pluginHandlers/: CMakeLists.txt  lv2Handler.cpp
src/pluginHandlers/lv2/: CMakeLists.txt  lv2Handler.cpp  worker.cpp
